# tds-hello-naija

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/tds_hello_naija/: __init__.py
tests/: test_greet.py
